# RayTracer

./: .gitignore  CMakeLists.txt  README.md
source/: Config.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  Main.cpp  Plane.cpp  Plane.h  Random.h  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  ShadeRec.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  ViewPlane.h
source/material/: Material.cpp  Material.h
source/sampler/: Jittered.cpp  Jittered.h  Sampler.cpp  Sampler.h
